# Pythonizer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-mac.yml  build.yml
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AttributeInspector.jsx  CodeEditor.jsx  ComponentPalette.jsx  ConsolePanel.jsx  DesignCanvas.jsx  Toolbar.jsx
src/store/: designStore.js
src/utils/: codeGenerator.js  path.js  tauriAPI.js
www/: index.html  styles.css
